--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sudosumo_v2",
   "version": "0.1.0",
-  "private": true,
+  "private": "true",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/lodash": "^4.17.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
-    "sudoku-gen": "^1.0.2",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
