refactor(project): add eslintrc and vscode for setup rules and code formatter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,10 @@
       "error",
       "always"
     ],
-    "no-unused-vars": "error"
+    "no-unused-vars": "error",
+    "semi": [
+      "error",
+      "never"
+    ] // Enforces semicolons
   }
 }
