--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sudosumo_v2",
-  "version": "0.1.0",
+  "version": "0.0.1-beta",
   "private": "true",
   "scripts": {
     "dev": "next dev",
